psa/deny-privileged-profile/.chainsaw-test/ns-bad.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged
  name: deny-privileged-bad-ns01
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged
    foo: bar
  name: deny-privileged-bad-ns02
